--- a/video1.html
+++ b/video1.html
@@ -13,7 +13,7 @@
     <h1>The Return of Superman | 슈퍼맨이 돌아왔다 - Ep.230: The World Is a School[ENG/2018.06.24]</h1>
     <h2>KBS World TV</h2>
     <div>
-      A family-friendly South Korean reality TV show, starring the cast: Bong Taegyu, Lee Donggook, Sam Hammington, and Ko Jiyong.
+      A family-friendly South Korean reality TV show, starring the cast: Bong Taegyu, Lee Donggook, Sam Hammington, Ko Jiyong, and their children.
     </div>
   </body>
 </html>
