--- a/video2.html
+++ b/video2.html
@@ -13,7 +13,7 @@
     <h1>Tiffany Poon - Chopin Etude Op.10 No.4</h1>
     <h2>Tiffany Poon</h2>
     <div>
-    Tiffany Poon performs Chopin's Etude Op.10 No.4. Recorded on 6 October 2017.
+    Tiffany Poon plays Chopin's Etude Op.10 No.4. Recorded on 6 October 2017.
     </div>
   </body>
 </html>
